test/sema/typeck/literal/invalid-escape-char.out
error: invalid escape sequence.
--> invalid-escape-char.dora:1:11
 | fn f() { '\k'; }
             ~~
 | 
1 error found.
